# terry

./: .codeclimate.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile  README.md  Vagrantfile  build.sh  build_docker.py  build_vm.sh  create_image.sh  format-specs.md  nginx-example.conf  package-lock.json  package.json  proxy.js  requirements.txt  run_tests.py  setup.py  swagger.yaml  tsconfig.prod.json
backend/: .gitignore  Cargo.toml  README.md  config.toml  requirements.txt  run_tests.py  rustfmt.toml  setup.py  swagger.yaml  test-requirements.txt
backend/.sqlx/: query-09fabebdafbb01fa4b1da8040e57e375e27caaf2f79d072c4647f8565b81c333.json  query-2310015c49fdc9f7af36528a629a6dcefcf7860d0536bc57f8950ab17624a05e.json  query-28b1791313bbf909f718f9addcb7976819c3fab5f37de1dc5d328d54516ebf16.json  query-350e8c47c919277ddff7fdd4ca24599f24625b8643076a39836c3fd66783735b.json  query-41ecc6991dd42328dafe088a91d8f040eda96d390882a2b63d44ce091480fab2.json  query-42afb0a6da5b4a65cf51dd315d378de135a8e5a2c4915f346163f6854cdb8e93.json  query-4ad43c1de0380d7a51e32d9710b1aa791c96001f1310ca60378a67acf5171c2e.json  query-6a8a79ff2e1fd8ee4e70cc1dec33a56d9dc1d802f513035b17c63540f90932e7.json  query-7956d37b53ade0780fc6c69b0c702b481d8b3fd3381b0639f1a366cda5f1ac10.json  query-83cb58a23b746f96af171c17eb6e5f75dc24f5817976a8c402f88e9108325d1d.json  query-97477bc8b617e4bfbfb200ce0cbcb718c5a4f6db5d372d3cb28166ca4a3ff72d.json  query-a2d1db3aefd9d5cca2f3d97973530e7248ec30c74707146d34710371ec3ea027.json  query-a78e8e90a4a9c8c4219ee8b603ef17b62330b5dd679df75f8b3682c550211680.json  query-a88d1a4dfb24e544fffeb093f17a05504ff19a48ed6d43eae900267a0e9049eb.json  query-a8ef37ec330f27038aa72837e7a1e353098922b8ead980b259d53303f92a56f3.json  query-ced8bb10a74d376597bcd6af89112003c8af9192c3603f12e622630596e5440d.json  query-d75d11f7815d8ea56a74d1602fbbb45bdd6e84251cc5598d805336125c2d9631.json  query-fa7baab20d8174ff9a12551aaa7ccc262368200ad8e054a02aac40213d04a4b1.json
backend/config/: example.config.yaml  extra_material.md
backend/migrations/: 20251015212236_initial_schema.up.sql  20251019194300_add_communication_schema.up.sql
backend/src/: checker_api.rs  cli.rs  config.rs  export.rs  extractors.rs  import_user.rs  main.rs  models.rs  serve.rs
backend/src/database/: announcement.rs  output.rs  submission.rs  task.rs  user.rs  user_task.rs
backend/src/handlers/: admin.rs  api.rs  auth.rs  info.rs  mod.rs  proxy.rs  static_files.rs  upload.rs
backend/terry/: __main__.py  config.py  contest_manager.py  crypto.py  database.py  detect_exe.py  handler_params.py  logger.py  schema.py  server.py  storage_manager.py  utility.py  validators.py
backend/terry/handlers/: admin_handler.py  base_handler.py  contest_handler.py  info_handler.py  upload_handler.py
backend/test/: __init__.py  test_config.py  test_contest_manager.py  test_crypto.py  test_database.py  test_logger.py  test_server.py  test_storage_manager.py  test_validators.py  utils.py
backend/utils/: fix_header.py  format.sh
communication/: Cargo.toml  Dockerfile  README.md  schema.sql
communication/backend/: Cargo.toml  testData.sql
communication/docker/: .gitignore  Dockerfile  build.sh  start.sh
communication/frontend/: .eslintrc.cjs  package.json
communication/src/: db.rs  main.rs
communication/util/: import_users.py
rust_backend/: .env  .gitignore  Cargo.toml  config.toml
rust_backend/.sqlx/: query-057d87efd1e792476c436a4a4a094cc303507af009eaa5edb462fa5391f9df6c.json  query-0684f842a3a7d615570827d12f8fcaccf8eea4a510195da0537e4a97ea216671.json  query-1102162b4ce4d3eb27536f53f061e034f07bb873f9871f43032896753641852a.json  query-15979b4a23e36b8c34961b487ed54b2e070bece68cf90048db492aacb0ce3417.json  query-2498e85204457984451505b8b1827282df9fd3efdf33b4de1090c3aae569b7e9.json  query-285d4139caf0affe0d2532d58d067486ee7ed4452e389c60091241b9f6e2e562.json  query-4f750ba6bd6b4f8b2f9ac4d3229683e66e580419fe22d0593a0ba80f0e580867.json  query-5ee9609f37ae42096d5d3728508acdee86a07d9b2decd9dc498edb4060d141f9.json  query-64a16a5bf3338d7642670f1d2228d0457bb7042f788a02267607a99236af4eae.json  query-6695a428491dd6256c64d078f95c30ece4e24cfc413a4e13838646c963739b7d.json  query-a5085d1b404820c4014605e585804f7bbc473248c6598fa464413de127cf36fd.json  query-bcd46a33d1b1497c7e9afb1d91c7b3005f8740114e165e7e5cf8ad82d8a418e2.json  query-cefb28b946de094fb9545cc4af35587048fc2ffcc0fc0a54974d5458c46f75e3.json  query-d3bd15ef361a77bb1195ad1bf70bea47b9872ee0d342f70411a94328c497cb8d.json  query-e1d3f2796beda89a18671c44a915ca06417eb71a4f5bf51896f12b476ec345a4.json  query-f66c664c8857e3b237b18fd07f55bced0d3ec18feb362385adf58f301c2c99fe.json
rust_backend/config/: contest_description.md  public_description.md
rust_backend/migrations/: 20251015212236_initial_schema.down.sql
rust_backend/src/: checker_api.rs  cli.rs  contest_manager.rs  detect_exe.rs  import_task.rs  import_user.rs  storage_manager.rs
(+500 files in other folders)
