[package]
name = "terry"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
async-priority-queue = "0.1.1"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie", "attachment"] }
bitflags = "2.11.0"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
humantime = "2.3.0"
humantime-serde = "1.1.1"
derive_more = { version = "2.1.1", features = ["display"] }
num_cpus = "1.17.0"
once_cell = "1.21.3"
rand = "0.10.0"
regex = "1.12.3"
csv = "1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
tower-http = { version = "0.6.8", features = ["fs", "set-header"] }
teloxide = { version = "0.17.0", features = ["macros", "rustls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
time = "0.3.47"
fs_extra = "1.3.0"
blake3 = "1.8.3"
http = "1.4.0"
tower = "0.5.3"

[dev-dependencies]
tempfile = "3.26.0"
