[package]
name = "terry-communication-backend"
version = "0.1.0"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
env_logger = "0.7"
log = "0.4"
failure = "0.1.8"
futures = "0.3.1"
r2d2 = "0.8.9"
r2d2_sqlite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[dependencies.telegram-bot]
version = "0.8"
default-features = false
features = ["rustls"]

[dependencies.rusqlite]
version = "0.27"
features = ["bundled"]
