[package]
name = "terry-communication-backend"
version = "0.1.0"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.10"
log = "0.4"
futures = "0.3.28"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
anyhow = "1.0.71"
teloxide = { version = "0.12.2", default-features=false, features = ["ctrlc_handler", "rustls"] }

[dependencies.rusqlite]
version = "0.29"
features = ["bundled"]
