[package]
name = "terry"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
async-priority-queue = "0.1.1"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.1", features = ["cookie", "attachment"] }
bitflags = "2.10.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
humantime = "2.3.0"
humantime-serde = "1.1.1"
derive_more = "1.0.0"
num_cpus = "1.17.0"
once_cell = "1.21.3"
rand = "0.9.2"
regex = "1.12.2"
csv = "1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "0.6.6", features = ["fs"] }
teloxide = { version = "0.17.0", features = ["macros", "rustls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
time = "0.3.44"
fs_extra = "1.3.0"
blake3 = "1.8.2"

[dev-dependencies]
tempfile = "3.23.0"
