[package]
name = "terry-communication-backend"
version = "0.1.0"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
env_logger = "0.7"
failure = "0.1.7"
futures = "0.3.1"
r2d2 = "0.8.2"
r2d2_sqlite = "0.14"
rusqlite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
